# HaskellLCS

./: LearningClassifier.cabal
.stack-work/install/x86_64-windows/lts-3.11/7.10.2/doc/LearningClassifier-0.1.0.0/: LICENSE
.stack-work/install/x86_64-windows/lts-3.11/7.10.2/flag-cache/: LearningClassifier-0.1.0.0
src/: Main.hs  perception.hs
