name:                LearningClassifier
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/dathayer23/LearningClassifier#readme
license:             BSD3
license-file:        LICENSE
author:              David Thayer
maintainer:          dpthayer@gmail.com
copyright:           Copyright: (c) 2015 David Thayer
category:            simple
build-type:          Simple
cabal-version:       >=1.10

executable LearningClassifier
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
